update instructor mainance